chore: rename file (fix typo)

--- a/obfuscxx/obfuscxx.vcxproj
+++ b/obfuscxx/obfuscxx.vcxproj
@@ -131,7 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="exapmle.cpp" />
+    <ClCompile Include="example.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\obfuscxx.h" />
